--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <title>Chari's Portfolio</title>
 
     <!-- REQUIRED: Bootstrap CSS -->
-    <link href="<https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- REQUIRED: Your Custom CSS-->
     <link rel="stylesheet" href="css/style.css">
 
     <!-- REQUIRED: Google Font API -->
-    <link href="<https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap>" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap>" rel="stylesheet">
 </head>
 
 <body>
@@ -42,9 +42,8 @@
     </header>
     <!--End of Header Section-->
 
-    <header{ background: url(../images/background.png); background-size: cover; background-position: center; color:
-        var(--bs-white); height: 75vh; display: flex; align-items: center; justify-content: center; } <!-- Start of Hero
-        Section -->
+    <!--Start of Hero Section-->
+    <section class="hero">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-xl-4">
@@ -57,130 +56,128 @@
                 </div>
             </div>
         </div>
-        <!-- End of Hero Section -->
+    </section>
+    <!-- End of Hero Section -->
 
-        <!-- Star of Projects Section -->
-        <section class="py-5">
-            <div class="container-fluid">
-                <div class="row">
-                    Projects Section
+    <!-- Star of Projects Section -->
+    <section class="py-5">
+        <div class="container-fluid">
+            <div class="row">
+                Projects Section
+                <div class="col-xs-12 col-sm-6 col-xl-4">
+                    <div>
+                        <h2>Budgeting</h2>
+                        <p>
+                        <p><img src="/Images/course1.png" alt="Courses"></p>
+                        </p>
+                        <p>Through courses on budgeting, users can learn to organize their income and expenses
+                            effectively, <br>
+                            gaining insights into how to make the most of their money.</p>
+                        <p>Learn practical strategies to manage your finances effectively by tracking your spending
+                            and
+                            creating
+                            personalized <br>
+                            budgets that align with your financial goals. </p>
+                        <p><button> </button></p>
+                    </div>
                     <div class="col-xs-12 col-sm-6 col-xl-4">
                         <div>
-                            <h2>Budgeting</h2>
+                            <h2>Bank Linking</h2>
                             <p>
-                            <p><img src="/Images/course1.png" alt="Courses"></p>
+                            <p><img src="/Images/bank linking.png" alt="Pricing & Subscription"></p>
                             </p>
-                            <p>Through courses on budgeting, users can learn to organize their income and expenses
-                                effectively, <br>
-                                gaining insights into how to make the most of their money.</p>
-                            <p>Learn practical strategies to manage your finances effectively by tracking your spending
+                            <p>For users seeking a more in-depth experience, a premium subscription unlocks advanced
+                                features.</p>
+                            <p>Securely link your bank accounts to a savings app, enabling you to track your income
                                 and
-                                creating
-                                personalized <br>
-                                budgets that align with your financial goals. </p>
-                            <p><button> </button></p>
+                                expenses seamlessly.
+                                <br>
+                                Designed to help you make the most of the bank-linking feature to improve your
+                                budgeting
+                                and saving
+                                efficiency.
+                            </p>
+                            <button></button>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <div>
-                                <h2>Bank Linking</h2>
+                                <h2>Notifications & Reminders</h2>
                                 <p>
-                                <p><img src="/Images/bank linking.png" alt="Pricing & Subscription"></p>
+                                <p><img src="/Images/Notifications & Reminders.png" alt="Data Collection Method">
                                 </p>
-                                <p>For users seeking a more in-depth experience, a premium subscription unlocks advanced
-                                    features.</p>
-                                <p>Securely link your bank accounts to a savings app, enabling you to track your income
-                                    and
-                                    expenses seamlessly.
+                                </p>
+                                <p>Designed with user privacy and personalization in mind, gathering only essential
+                                    information to <br>
+                                    create a tailored budgeting and savings experience</p>
+                                <p>Focuses on automating financial habits by using technology to track spending,
                                     <br>
-                                    Designed to help you make the most of the bank-linking feature to improve your
-                                    budgeting
-                                    and saving
-                                    efficiency.
+                                    remind you to save, and alert you to key financial milestones. <br>
+                                    Optimize your savings strategy through timely alerts and custom reminders <br>
+                                    that keep you focused and on track.
                                 </p>
                                 <button></button>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-xl-4">
                                 <div>
-                                    <h2>Notifications & Reminders</h2>
+                                    <h2>Savings Goals</h2>
                                     <p>
-                                    <p><img src="/Images/Notifications & Reminders.png" alt="Data Collection Method">
+                                    <p><img src="/Images/Savings Goals.png" alt="Research Objectives"></p>
                                     </p>
+                                    <p>Focus on understanding young adults' financial habits, challenges, <br>
+                                        and goals to design an effective tool for budgeting and long-term saving.
                                     </p>
-                                    <p>Designed with user privacy and personalization in mind, gathering only essential
-                                        information to <br>
-                                        create a tailored budgeting and savings experience</p>
-                                    <p>Focuses on automating financial habits by using technology to track spending,
-                                        <br>
-                                        remind you to save, and alert you to key financial milestones. <br>
-                                        Optimize your savings strategy through timely alerts and custom reminders <br>
-                                        that keep you focused and on track.
-                                    </p>
-                                    <button></button>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-xl-4">
+                                    <p>In this course, you'll learn how to set clear, actionable savings goals to
+                                        secure
+                                        your financial future.<br>
+                                        Guide you through the steps of creating and managing savings goals that are
+                                        realistic and achievable. </p>
+                                    <button></button></a>
                                     <div>
-                                        <h2>Savings Goals</h2>
-                                        <p>
-                                        <p><img src="/Images/Savings Goals.png" alt="Research Objectives"></p>
-                                        </p>
-                                        <p>Focus on understanding young adults' financial habits, challenges, <br>
-                                            and goals to design an effective tool for budgeting and long-term saving.
-                                        </p>
-                                        <p>In this course, you'll learn how to set clear, actionable savings goals to
-                                            secure
-                                            your financial future.<br>
-                                            Guide you through the steps of creating and managing savings goals that are
-                                            realistic and achievable. </p>
-                                        <button></button></a>
-                                        <div>
-                                        </div>
                                     </div>
-        </section>
-        <!-- End of Project Section -->
+                                </div>
+    </section>
+    <!-- End of Project Section -->
 
-        <!-- Start of About Me Section -->
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <section class="mb-xs-4 mb-xl-5">
-                        <h2>About Me</h2>
-                        <p>My name is Charidel Busbuso, and I am currently in my senior year at the University of West
-                            Oahu, <br>
-                            pursuing a degree in the Creative Media Program. As a passionate and driven individual, <br>
-                            I have always been fascinated by the power of storytelling through various media forms,
-                            whether it’s writing, design, or visual arts. <br>
-                            My studies have allowed me to explore various creative disciplines, refining my skills and
-                            expanding my understanding of how media can inspire, connect, and communicate. <br>
-                            I am excited to use my education to craft compelling narratives and bring ideas to life
-                            through innovative projects, collaborations, or independent creations.</p>
-                        <p><button> </button></p>
-                        <div class="col">
-                            <p>
-                            <p><img src="/images/Chari Busbuso.png" alt="Chari Busbuso"></p>
-                            </p>
-                        </div>
-                    </section>
-                </div>
+    <!-- Start of About Me Section -->
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6">
+                <section class="mb-xs-4 mb-xl-5">
+                    <h2>About Me</h2>
+                    <p>My name is Charidel Busbuso, and I am currently in my senior year at the University of West
+                        Oahu, <br>
+                        pursuing a degree in the Creative Media Program. As a passionate and driven individual, <br>
+                        I have always been fascinated by the power of storytelling through various media forms,
+                        whether it’s writing, design, or visual arts. <br>
+                        My studies have allowed me to explore various creative disciplines, refining my skills and
+                        expanding my understanding of how media can inspire, connect, and communicate. <br>
+                        I am excited to use my education to craft compelling narratives and bring ideas to life
+                        through innovative projects, collaborations, or independent creations.</p>
+                    <p><button> </button></p>
+                    <div class="col">
+                        <p>
+                        <p><img src="/images/Chari Busbuso.png" alt="Chari Busbuso"></p>
+                        </p>
+                    </div>
+                </section>
             </div>
         </div>
-        </div>
-        </div>
-        </div>
-        </div>
-        <!-- End of About Me Section -->
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <!-- End of About Me Section -->
 
-        <!-- Start of Hero Section -->
-        <footer>
-            Footer
-        </footer>
-        <footer { background-color: var(--bs-primary); color: var(--bs-white); text-align: center; } footer
-            .footer-social { width:24px; margin:.5rem } footer-social { width:24px; margin:.5rem } <!-- End of Hero
-            Section -->
+    <!-- Start of Hero Section -->
 
-            <!-- REQUIRED: Javascript -->
-            <script src="<https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js>"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                crossorigin="anonymous"></script>
+    !-- End of Hero
+    Section --
+
+    <!-- REQUIRED: Javascript -->
+    <script src="<https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js>"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
