--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="p-3">
         <nav class="navbar navbar-expand-lg">
             <!-- Logo -->
-            <a class="navbar-brand" href="#">NAME</a>
+            <a class="navbar-brand" href="#">Savings Plan</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,10 +46,11 @@
     <section class="hero">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-xl-4">
-                    <section class="mb-xs-4 mb-xl-5">
-                        <h1>Designed to help young adults
-                            manage their budgets effectively and <br> save for long-term purchases.</h1>
+                <div class="col-xs-12 col-sm-6 col-xl-5">
+                    <section class="mb-xs-4 mb-xl-6">
+                        <h2>Designed to help young adults manage their budgets effectively and save for long-term
+                            purchases.</h2> 
+
                         <h1>Chari Busbuso <br>
                             Product UX/UI Designer</h1>
                     </section>
@@ -59,79 +60,68 @@
     </section>
     <!-- End of Hero Section -->
 
-    <!-- Star of Projects Section -->
+    <!-- Start of Projects Section -->
     <section class="py-5">
         <div class="container-fluid">
             <div class="row">
-                Projects Section
+                <h2>Projects Section</h2>
                 <div class="col-xs-12 col-sm-6 col-xl-4">
                     <div>
-                        <h2>Budgeting</h2>
+                        <!-- Project 1 Section -->
+                        <h3>Budgeting</h3>
                         <p>
                         <p><img src="/Images/course1.png" alt="Courses"></p>
                         </p>
                         <p>Through courses on budgeting, users can learn to organize their income and expenses
-                            effectively, <br>
-                            gaining insights into how to make the most of their money.</p>
-                        <p>Learn practical strategies to manage your finances effectively by tracking your spending
-                            and
-                            creating
-                            personalized <br>
-                            budgets that align with your financial goals. </p>
+                            effectively, gaining insights into how to make the most of their money.</p>
+                        <p>Learn practical strategies to manage your finances effectively by tracking your spending and
+                            creating personalized budgets that align with your financial goals. </p>
                         <p><button> </button></p>
                     </div>
+                    <!-- Project 2 Section -->
                     <div class="col-xs-12 col-sm-6 col-xl-4">
                         <div>
-                            <h2>Bank Linking</h2>
+                            <h3>Bank Linking</h3>
                             <p>
                             <p><img src="/Images/bank linking.png" alt="Pricing & Subscription"></p>
                             </p>
                             <p>For users seeking a more in-depth experience, a premium subscription unlocks advanced
                                 features.</p>
-                            <p>Securely link your bank accounts to a savings app, enabling you to track your income
-                                and
-                                expenses seamlessly.
-                                <br>
-                                Designed to help you make the most of the bank-linking feature to improve your
-                                budgeting
-                                and saving
-                                efficiency.
-                            </p>
-                            <button></button>
+                            <p>Securely link your bank accounts to a savings app, enabling you to track your income and
+                                expenses seamlessly. <br>
+                                Designed to help you make the most of the bank-linking feature to improve your budgeting
+                                and saving efficiency. </p>
+                            <p><button> </button></p>
                         </div>
+                        <!-- Project 3 Section -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <div>
-                                <h2>Notifications & Reminders</h2>
+                                <h3>Notifications & Reminders</h3>
                                 <p>
                                 <p><img src="/Images/Notifications & Reminders.png" alt="Data Collection Method">
                                 </p>
-                                </p>
                                 <p>Designed with user privacy and personalization in mind, gathering only essential
-                                    information to <br>
-                                    create a tailored budgeting and savings experience</p>
-                                <p>Focuses on automating financial habits by using technology to track spending,
-                                    <br>
-                                    remind you to save, and alert you to key financial milestones. <br>
-                                    Optimize your savings strategy through timely alerts and custom reminders <br>
-                                    that keep you focused and on track.
-                                </p>
-                                <button></button>
+                                    information to create a tailored budgeting and savings experience</p>
+                                <p>Focuses on automating financial habits by using technology to track spending, remind
+                                    you to save, and alert you to key financial milestones. <br>
+                                    Optimize your savings strategy through timely alerts and custom reminders that keep
+                                    you focused and on track. </p>
+                                <p><button> </button></p>
                             </div>
+                            <!-- Project 4 Section -->
                             <div class="col-xs-12 col-sm-6 col-xl-4">
                                 <div>
-                                    <h2>Savings Goals</h2>
+                                    <h3>Savings Goals</h3>
                                     <p>
                                     <p><img src="/Images/Savings Goals.png" alt="Research Objectives"></p>
                                     </p>
-                                    <p>Focus on understanding young adults' financial habits, challenges, <br>
-                                        and goals to design an effective tool for budgeting and long-term saving.
-                                    </p>
-                                    <p>In this course, you'll learn how to set clear, actionable savings goals to
-                                        secure
+                                    <p>Focus on understanding young adults' financial habits, challenges, and goals to
+                                        design an effective tool for budgeting and long-term saving. </p>
+                                    <p>In this course, you'll learn how to set clear, actionable savings goals to secure
                                         your financial future.<br>
                                         Guide you through the steps of creating and managing savings goals that are
                                         realistic and achievable. </p>
-                                    <button></button></a>
+                                    <p><button> </button></p>
                                     <div>
                                     </div>
                                 </div>
@@ -144,19 +134,18 @@
             <div class="col-xs-12 col-sm-6">
                 <section class="mb-xs-4 mb-xl-5">
                     <h2>About Me</h2>
-                    <p>My name is Charidel Busbuso, and I am currently in my senior year at the University of West
-                        Oahu, <br>
-                        pursuing a degree in the Creative Media Program. As a passionate and driven individual, <br>
-                        I have always been fascinated by the power of storytelling through various media forms,
-                        whether it’s writing, design, or visual arts. <br>
+                    <p>My name is Charidel Busbuso, and I am currently in my senior year at the University of West Oahu,
+                        pursuing a degree in the Creative Media Program. <br>
+                        A passionate and driven individual, I have always been fascinated by the power of storytelling
+                        through various media forms, whether it is writing, design, or visual arts. <br>
                         My studies have allowed me to explore various creative disciplines, refining my skills and
                         expanding my understanding of how media can inspire, connect, and communicate. <br>
-                        I am excited to use my education to craft compelling narratives and bring ideas to life
-                        through innovative projects, collaborations, or independent creations.</p>
+                        I am excited to use my education to craft compelling narratives and bring ideas to life through
+                        innovative projects, collaborations, or independent creations.</p>
                     <p><button> </button></p>
                     <div class="col">
                         <p>
-                        <p><img src="/images/Chari Busbuso.png" alt="Chari Busbuso"></p>
+                        <p><img src="/Images/Chari Busbuso.png" alt="Chari Busbuso"></p>
                         </p>
                     </div>
                 </section>
@@ -168,11 +157,6 @@
     </div>
     </div>
     <!-- End of About Me Section -->
-
-    <!-- Start of Hero Section -->
-
-    !-- End of Hero
-    Section --
 
     <!-- REQUIRED: Javascript -->
     <script src="<https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js>"
