--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         expanding my understanding of how media can inspire, connect, and communicate. <br>
                         I am excited to use my education to craft compelling narratives and bring ideas to life through
                         innovative projects, collaborations, or independent creations.</p>
-                    <p><button> </button></p>
+                    <p><button> <button></p>
                     <div class="col">
                         <p>
                         <p><img src="/Images/Chari Busbuso.png" alt="Chari Busbuso"></p>
